fixed input-field bug

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <a id="register" class="waves-effect waves-light btn login-register" onclick="navigate('#' + this.id)">Login/Register</a>
                 <div style="margin-top: 11px; background-color: #616161; border-radius: 5px;" class="right">
-                    <div class="input-field">
+                    <div class="custom-input-field input-field">
                         <input id="search" type="search" placeholder="Type to search.." required>
                         <label for="search"><i style="line-height: 40px" class="material-icons">search</i></label>
                     </div>
