slight adjustment to search bar and login button

--- a/index.html
+++ b/index.html
@@ -204,23 +204,44 @@
             <div class="nav-wrapper nav-colors">
                 <a id="cyber-logo" class="brand-logo"><img src="images/cycfed.jpg"></a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <a id="register" class="waves-effect waves-light btn login-register" onclick="navigate('#' + this.id)">Login/Register</a>
-                <div style="margin-top: 11px; background-color: #616161; border-radius: 5px;" class="right">
+                <!-- <a id="register" class="waves-effect waves-light btn login-register" onclick="navigate('#' + this.id)">Login/Register</a> -->
+                <!-- <div style="margin-top: 11px; background-color: #616161; border-radius: 5px;" class="right">
                     <div class="custom-input-field input-field">
                         <input id="search" type="search" placeholder="Type to search.." required>
                         <label for="search"><i style="line-height: 40px" class="material-icons">search</i></label>
                     </div>
-                </div>
+                </div> -->
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a id="hackathons" onclick="navigate('#' + this.id)">Hackathons</a></li>
                     <li><a id="leaderboards" onclick="navigate('#' + this.id)">Leaderboards</a></li>
                     <li><a id="rules" onclick="navigate('#' + this.id)">Rules</a></li>
-                    
+                    <li class="nohover">
+                        <div style="margin-top: 11px; background-color: #616161; border-radius: 5px;" class="right">
+                            <div class="custom-input-field input-field">
+                                <input id="search" type="search" placeholder="Type to search.." required>
+                                <label for="search"><i style="line-height: 40px" class="material-icons">search</i></label>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nohover">
+                        <a id="register" class="waves-effect waves-light btn login-register" onclick="navigate('#' + this.id)">Login/Register</a>
+                    </li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a id="leaderboards" onclick="navigate('#' + this.id)">Leaderboards</a></li>
                     <li><a id="hackathons" onclick="navigate('#' + this.id)">Hackathons</a></li>
                     <li><a id="rules" onclick="navigate('#' + this.id)">Rules</a></li>
+                    <li class="nohover">
+                        <div style="margin-top: 11px; background-color: #616161; border-radius: 5px;" class="right">
+                            <div class="custom-input-field input-field">
+                                <input id="search" type="search" placeholder="Type to search.." required>
+                                <label for="search"><i style="line-height: 40px" class="material-icons">search</i></label>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nohover">
+                        <a id="register" class="waves-effect waves-light btn login-register" onclick="navigate('#' + this.id)">Login/Register</a>
+                    </li>
                 </ul>
             </div>
         </nav>
