--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
         var breaker = 0;
         var tableNum = 1;
         var leaderboardsId = '#leaderboards';
-        var hackathonsId = '#hackathons';
+        var homeId = '#home';
         var rulesId = '#rules';
         var registerId = '#register';
+        var teamsId = '#teams';
         var leaderContainer = '#leader-container';
-        var hacksContainer = '#hacks-container';
+        var homeContainer = '#home-container';
         var rulesContainer = '#rules-container';
         var registerContainer = '#register-container';
+        var teamsContainer = '#teams-container'
+        $tabs = $('#tab1');
             function createMockList() {
                 for (a = 0; a < names.length*4; a++) {
                     wins = Math.floor((Math.random() * 100));
@@ -87,6 +90,7 @@
                         $('tr:last').append("<td>" + table1[i].totalWin + "</td>");
                         $('tr:last').append("<td>" + table1[i].ratio + "</td>");
                         $('tr:last').append("<td>" + table1[i].div + "</td>");
+                        $('tr:last').append('<a class="btn-floating btn-small waves-effect waves-light red" style="margin-top: 8px; margin-left: 40%;"><i class="material-icons">add</i></a>');
                     } else if (tableNum == 2) {
                         $('#table-2:first').append("<tr>");
                         $('tr:last').append("<td>" + count + "</td>");
@@ -95,6 +99,7 @@
                         $('tr:last').append("<td>" + table2[i].totalWin + "</td>");
                         $('tr:last').append("<td>" + table1[i].ratio + "</td>");
                         $('tr:last').append("<td>" + table2[i].div + "</td>");
+                        $('tr:last').append('<a class="btn-floating btn-small waves-effect waves-light red" style="margin-top: 8px; margin-left: 40%;"><i class="material-icons">add</i></a>');
                     } else if (tableNum == 3) {
                         $('#table-3:first').append("<tr>");
                         $('tr:last').append("<td>" + count + "</td>");
@@ -103,6 +108,7 @@
                         $('tr:last').append("<td>" + table3[i].totalWin + "</td>");
                         $('tr:last').append("<td>" + table1[i].ratio + "</td>");
                         $('tr:last').append("<td>" + table3[i].div + "</td>");
+                        $('tr:last').append('<a class="btn-floating btn-small waves-effect waves-light red" style="margin-top: 8px; margin-left: 40%;"><i class="material-icons">add</i></a>');
                     } else {
                         $('#table-4:first').append("<tr>");
                         $('tr:last').append("<td>" + count + "</td>");
@@ -111,6 +117,7 @@
                         $('tr:last').append("<td>" + table4[i].totalWin + "</td>");
                         $('tr:last').append("<td>" + table1[i].ratio + "</td>");
                         $('tr:last').append("<td>" + table4[i].div + "</td>");
+                        $('tr:last').append('<a class="btn-floating btn-small waves-effect waves-light red" style="margin-top: 8px; margin-left: 40%;"><i class="material-icons">add</i></a>');
                     }
                     count++;
                     i++;
@@ -129,7 +136,7 @@
                         else
                              $(this).show();                
                     });
-                    $.each($("#hacks-container").find("div .card"), function() {
+                    $.each($("#home-container").find("div .card"), function() {
                         if($(this).text().toLowerCase().indexOf($(_this).val().toLowerCase()) == -1)
                            $(this).hide();
                         else
@@ -145,37 +152,58 @@
             });
             $(document).ready(function(){
                 //$('#nav-table').addClass('active');
-                //$('ul.tabs').tabs();
+                $('ul.tabs').tabs('select_tab', '#table-2');
+                //$tabs.tabs().tabs('select_tab', '#tab1');
             });
             function navigate(id) {
                 if (id == leaderboardsId && !($(leaderContainer).is(':visible'))) {
                     //$('#nav-table').addClass('active');
                     //$('ul.tabs').tabs('select_tab', 'nav-table');
+                    //$('#tab1').removeClass('active');
                     $(leaderContainer).fadeIn(1000);
-                    if ($(hacksContainer).is(':visible')) {
-                        $(hacksContainer).fadeOut(500);
+                    $('#nav2').addClass('active');
+                    //$('#tab1').addClass('active');
+                    if ($(homeContainer).is(':visible')) {
+                        $(homeContainer).fadeOut(500);
+                        $('#nav1').removeClass('active');
                     } else if ($(rulesContainer).is(':visible')){
                         $(rulesContainer).fadeOut(500);
+                        $('#nav4').removeClass('active');
+                    } else if ($(teamsContainer).is(':visible')) {
+                        $(teamsContainer).fadeOut(500);
+                        $('#nav3').removeClass('active');
                     } else {
                         $(registerContainer).fadeOut(500);
                     }
                 }
-                if (id == hackathonsId && !($(hacksContainer).is(':visible'))) {
-                    $(hacksContainer).fadeIn(1000);
+                if (id == homeId && !($(homeContainer).is(':visible'))) {
+                    $(homeContainer).fadeIn(1000);
+                    $('#nav1').addClass('active');
                     if ($(leaderContainer).is(':visible')) {
                         $(leaderContainer).fadeOut(500);
+                        $('#nav2').removeClass('active');
                     } else if ($(rulesContainer).is(':visible')){
                         $(rulesContainer).fadeOut(500);
+                        $('#nav4').removeClass('active');
+                    } else if ($(teamsContainer).is(':visible')) {
+                        $(teamsContainer).fadeOut(500);
+                        $('#nav3').removeClass('active');
                     } else {
                         $(registerContainer).fadeOut(500);                        
                     }
                 }
                 if (id == rulesId && !($(rulesContainer).is(':visible'))) {
                     $(rulesContainer).fadeIn(1000);
+                    $('#nav4').addClass('active');
                     if ($(leaderContainer).is(':visible')) {
                         $(leaderContainer).fadeOut(500);
-                    } else if ($(hacksContainer).is(':visible')){
-                        $(hacksContainer).fadeOut(500);
+                        $('#nav2').removeClass('active');
+                    } else if ($(homeContainer).is(':visible')){
+                        $(homeContainer).fadeOut(500);
+                        $('#nav1').removeClass('active');
+                    } else if ($(teamsContainer).is(':visible')) {
+                        $(teamsContainer).fadeOut(500);
+                        $('#nav3').removeClass('active');
                     } else {
                         $(registerContainer).fadeOut(500);
                     }
@@ -184,10 +212,32 @@
                     $(registerContainer).fadeIn(1000);
                     if ($(leaderContainer).is(':visible')) {
                         $(leaderContainer).fadeOut(500);
-                    } else if ($(hacksContainer).is(':visible')){
-                        $(hacksContainer).fadeOut(500);
+                        $('#nav2').removeClass('active');
+                    } else if ($(homeContainer).is(':visible')){
+                        $(homeContainer).fadeOut(500);
+                        $('#nav1').removeClass('active');
+                    } else if ($(teamsContainer).is(':visible')) {
+                        $(teamsContainer).fadeOut(500);
+                        $('#nav3').removeClass('active');
                     } else {
                         $(rulesContainer).fadeOut(500);
+                        $('#nav4').removeClass('active');
+                    }
+                }
+                if (id == teamsId && !($(teamsContainer).is('active'))) {
+                    $(teamsContainer).fadeIn(1000);
+                    $('#nav3').addClass('active');
+                    if ($(leaderContainer).is(':visible')) {
+                        $(leaderContainer).fadeOut(500);
+                        $('#nav2').removeClass('active');
+                    } else if ($(homeContainer).is(':visible')){
+                        $(homeContainer).fadeOut(500);
+                        $('#nav1').removeClass('active');
+                    } else if ($(rulesContainer).is(':visible')){
+                        $(rulesContainer).fadeOut(500);
+                        $('#nav4').removeClass('active');
+                    } else {
+                        $(registerContainer).fadeOut(500);
                     }
                 }
             }
@@ -236,9 +286,10 @@
                     </div>
                 </div> -->
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a id="hackathons" onclick="navigate('#' + this.id)">Hackathons</a></li>
-                    <li><a id="leaderboards" onclick="navigate('#' + this.id)">Leaderboards</a></li>
-                    <li><a id="rules" onclick="navigate('#' + this.id)">Rules</a></li>
+                    <li id="nav1" class="active"><a id="home" onclick="navigate('#' + this.id)">Home</a></li>
+                    <li id="nav2"><a id="leaderboards" onclick="navigate('#' + this.id)">Leaderboards</a></li>
+                    <li id="nav3"><a id="teams" onclick="navigate('#' + this.id)">Teams</a></li>
+                    <li id="nav4"><a id="rules" onclick="navigate('#' + this.id)">Rules</a></li>
                     <li class="nohover">
                         <div style="margin-top: 11px; background-color: #616161; border-radius: 5px;" class="right">
                             <div class="custom-input-field input-field">
@@ -252,9 +303,10 @@
                     </li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
-                    <li><a id="leaderboards" onclick="navigate('#' + this.id)">Leaderboards</a></li>
-                    <li><a id="hackathons" onclick="navigate('#' + this.id)">Hackathons</a></li>
-                    <li><a id="rules" onclick="navigate('#' + this.id)">Rules</a></li>
+                    <li id="nav2" class="active"><a id="home" onclick="navigate('#' + this.id)">Home</a></li>
+                    <li id="nav1"><a id="leaderboards" onclick="navigate('#' + this.id)">Leaderboards</a></li>
+                    <li id="nav3"><a id="teams" onclick="navigate('#' + this.id)">Teams</a></li>
+                    <li id="nav4"><a id="rules" onclick="navigate('#' + this.id)">Rules</a></li>
                     <li class="nohover">
                         <div style="margin-top: 11px; background-color: #616161; border-radius: 5px;" class="right">
                             <div class="custom-input-field input-field">
@@ -269,7 +321,7 @@
                 </ul>
             </div>
         </nav>
-        <div id="hacks-container">
+        <div id="home-container">
             <div class="row">
                 <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
                     <h3 class="header">Title Hack 1</h3>
@@ -380,15 +432,15 @@
         <div id="leader-container">
             <div class="row">
                 <div class="col s12">
-                        <ul class="tabs">
-                        <li class="tab col s3"><a href="#table-1" class="active">Table 1</a></li>
+                        <ul class="tabs"> 
+                        <li class="tab col s3"><a id="tab1" class="active" href="#table-1">Table 1</a></li>
                         <li class="tab col s3"><a href="#table-2">Table 2</a></li>
                         <li class="tab col s3"><a href="#table-3">Table 3</a></li>
                         <li class="tab col s3"><a href="#table-4">Table 4</a></li>
                     </ul>
                 </div>
             </div>
-            <table id="row-tabs" class="striped bordered">
+            <table id="row-tabs" class="striped bordered centered">
                 <thead>
                 <tr>
                     <th data-field="number"></th>
@@ -397,6 +449,7 @@
                     <th data-field="name">Wins</th>
                     <th data-field="ratio">Win Ratio</th>
                     <th data-field="division">Division</th>
+                    <th data-field="add">Add to Team</th>
                 </tr>
                 </thead>
 
@@ -413,6 +466,9 @@
                     
                 </tbody>
             </table>
+        </div>
+        <div id="teams-container">
+            <p style="color: white">Not sure what to put in here yet, some ideas would be nice</p>
         </div>
         <div id="rules-container">
             <div class="row">              
