--- a/index.html
+++ b/index.html
@@ -150,19 +150,11 @@
                     });
                 });
             });
-            $(document).ready(function(){
-                //$('#nav-table').addClass('active');
-                $('ul.tabs').tabs('select_tab', '#table-2');
-                //$tabs.tabs().tabs('select_tab', '#tab1');
-            });
             function navigate(id) {
                 if (id == leaderboardsId && !($(leaderContainer).is(':visible'))) {
-                    //$('#nav-table').addClass('active');
-                    //$('ul.tabs').tabs('select_tab', 'nav-table');
-                    //$('#tab1').removeClass('active');
                     $(leaderContainer).fadeIn(1000);
                     $('#nav2').addClass('active');
-                    //$('#tab1').addClass('active');
+                    $('ul.tabs').tabs('select_tab', 'table-1');
                     if ($(homeContainer).is(':visible')) {
                         $(homeContainer).fadeOut(500);
                         $('#nav1').removeClass('active');
@@ -278,13 +270,6 @@
             <div class="nav-wrapper nav-colors">
                 <a id="cyber-logo" class="brand-logo"><img src="images/cycfed.jpg"></a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <!-- <a id="register" class="waves-effect waves-light btn login-register" onclick="navigate('#' + this.id)">Login/Register</a> -->
-                <!-- <div style="margin-top: 11px; background-color: #616161; border-radius: 5px;" class="right">
-                    <div class="custom-input-field input-field">
-                        <input id="search" type="search" placeholder="Type to search.." required>
-                        <label for="search"><i style="line-height: 40px" class="material-icons">search</i></label>
-                    </div>
-                </div> -->
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li id="nav1" class="active"><a id="home" onclick="navigate('#' + this.id)">Home</a></li>
                     <li id="nav2"><a id="leaderboards" onclick="navigate('#' + this.id)">Leaderboards</a></li>
@@ -432,7 +417,7 @@
         <div id="leader-container">
             <div class="row">
                 <div class="col s12">
-                        <ul class="tabs"> 
+                    <ul class="tabs"> 
                         <li class="tab col s3"><a id="tab1" class="active" href="#table-1">Table 1</a></li>
                         <li class="tab col s3"><a href="#table-2">Table 2</a></li>
                         <li class="tab col s3"><a href="#table-3">Table 3</a></li>
