--- a/test.html
+++ b/test.html
@@ -64,31 +64,19 @@
             });
         </script>
         <!-- <input type="text" id="search" placeholder="Type to search"> -->
-        <nav class="red lighten-1">
-        <div class="nav-wrapper">
-            <a href="#" class="left">Website</a>
-            <a href="#" data-activates="mobile-nav" class="right button-collapse"><i class="mdi-navigation-more-vert"></i></a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </ul>
-            <div class="right">
-                <form>
-                    <div class="input-field">
-                        <input type="search" id="search-field" class="field" required maxlength="">
-                        <label for="search-field"><i class="mdi-action-search"></i></label>
-                        <i class="mdi-navigation-close close"></i>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </nav>
-    <ul class="side-nav" id="mobile-nav">
-        <li><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
-    </ul>
-</header>
+        <div class="row">
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s3"><a href="#test1">Test 1</a></li>
+        <li class="tab col s3"><a href="#test2">Test 2</a></li>
+        <li class="tab col s3"><a href="#test3">Disabled Tab</a></li>
+        <li class="tab col s3"><a href="#test4">Test 4</a></li>
+      </ul>
+    </div>
+    <div id="test1" class="col s12">Test 1</div>
+    <div id="test2" class="col s12">Test 2</div>
+    <div id="test3" class="col s12">Test 3</div>
+    <div id="test4" class="col s12">Test 4</div>
+  </div>
     </body>
 </html>
